--- a/index.html
+++ b/index.html
@@ -2,149 +2,149 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KelNest - Your Notion-style Planner</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>KelNest - Notion-Style Planner</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
   <script>
     tailwind.config = {
       darkMode: 'class',
       theme: {
         extend: {
           fontFamily: {
-            sans: ['Inter', 'sans-serif'],
+            sans: ['Inter', 'sans-serif']
           },
-        },
-      },
+          animation: {
+            fadeIn: 'fadeIn 0.5s ease-in-out',
+          },
+          keyframes: {
+            fadeIn: {
+              '0%': { opacity: 0 },
+              '100%': { opacity: 1 }
+            }
+          }
+        }
+      }
     }
   </script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    #notesContainer {
-      line-height: 1.6;
-      min-height: calc(100vh - 150px);
-    }
     ::-webkit-scrollbar {
-      width: 6px;
       height: 6px;
+      width: 6px;
     }
     ::-webkit-scrollbar-thumb {
-      background: #c1c1c1;
-      border-radius: 4px;
+      background: #cbd5e1;
+      border-radius: 6px;
     }
-    .dark ::-webkit-scrollbar-thumb {
-      background: #6b7280;
+    .task-block:focus-within {
+      border-color: #6366f1;
     }
   </style>
 </head>
-<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-white font-sans h-screen flex overflow-hidden">
+<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-white font-sans h-screen overflow-hidden">
 
+<div class="flex h-full">
   <!-- Sidebar -->
-  <aside class="w-64 bg-white dark:bg-gray-800 border-r border-gray-200 dark:border-gray-700 flex flex-col">
-    <div class="p-6 flex items-center justify-between">
+  <aside class="w-64 bg-white dark:bg-gray-800 p-6 border-r dark:border-gray-700">
+    <div class="flex items-center justify-between mb-8">
       <h1 class="text-xl font-bold text-indigo-600 dark:text-indigo-400">KelNest 🪺</h1>
-      <button id="darkModeBtn" onclick="toggleDarkMode()" class="text-xl">🌙</button>
+      <button id="darkModeToggle" class="text-lg">🌙</button>
     </div>
-    <nav class="flex flex-col px-4 space-y-2">
-      <button id="tasksBtn" class="px-3 py-2 rounded text-left font-medium text-indigo-700 bg-indigo-100 dark:text-indigo-300 dark:bg-indigo-900">Tasks</button>
-      <button id="notesBtn" class="px-3 py-2 rounded text-left font-medium hover:bg-gray-100 dark:hover:bg-gray-700">Notes</button>
+    <nav class="space-y-4">
+      <button id="showTasks" class="w-full text-left px-4 py-2 rounded bg-indigo-100 text-indigo-800 dark:bg-indigo-900 dark:text-indigo-300">Tasks</button>
+      <button id="showNotes" class="w-full text-left px-4 py-2 rounded hover:bg-gray-100 dark:hover:bg-gray-700">Notes</button>
     </nav>
-    <div class="p-4 text-xs text-gray-400 text-center border-t border-gray-200 dark:border-gray-700 mt-auto">
-      KelNest © 2025
-    </div>
   </aside>
 
   <!-- Main Content -->
   <main class="flex-1 flex flex-col overflow-hidden">
-    <!-- Task Section -->
-    <section id="tasksSection" class="flex-1 overflow-auto p-6">
-      <h2 class="text-2xl font-semibold mb-4">🗓️ Tasks</h2>
-      <div class="bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-600 rounded-md p-4 shadow">
-        <input
-          id="taskTitle"
-          type="text"
-          placeholder="What do you need to do?"
-          class="w-full px-3 py-2 rounded border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:bg-gray-700 mb-3"
-        />
-        <button id="addTaskBtn" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white py-2 rounded">Add Task</button>
-      </div>
-      <ul id="taskList" class="mt-6 space-y-3"></ul>
+
+    <!-- Toolbar (sticky) -->
+    <div id="notesToolbar" class="hidden sticky top-0 z-10 bg-white dark:bg-gray-800 p-4 border-b dark:border-gray-700 flex-wrap gap-2 flex text-sm">
+      <button onclick="formatText('bold')" title="Bold" class="p-2 rounded bg-gray-100 dark:bg-gray-700">B</button>
+      <button onclick="formatText('italic')" title="Italic" class="p-2 rounded bg-gray-100 dark:bg-gray-700">I</button>
+      <button onclick="formatText('underline')" title="Underline" class="p-2 rounded bg-gray-100 dark:bg-gray-700">U</button>
+      <button onclick="insertHeading(1)" title="Heading 1" class="p-2 rounded bg-gray-100 dark:bg-gray-700">H1</button>
+      <button onclick="insertQuote()" title="Quote" class="p-2 rounded bg-gray-100 dark:bg-gray-700">❝</button>
+    </div>
+
+    <!-- Tasks Section -->
+    <section id="tasksSection" class="flex-1 overflow-y-auto p-6 space-y-4">
+      <h2 class="text-2xl font-semibold">🗂️ Task Board</h2>
+      <div id="taskList" class="space-y-2"></div>
+      <button onclick="addTask()" class="mt-4 bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">+ Add Task</button>
     </section>
 
     <!-- Notes Section -->
-    <section id="notesSection" class="hidden flex-1 overflow-auto p-6">
+    <section id="notesSection" class="hidden flex-1 overflow-y-auto p-6">
       <h2 class="text-2xl font-semibold mb-4">📝 Notes</h2>
-      <div class="bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-600 rounded-md p-4 shadow">
-        <div
-          id="notesContainer"
-          class="prose max-w-none dark:prose-invert min-h-[300px] focus:outline-none"
-          contenteditable="true"
-          spellcheck="false"
-        ></div>
-      </div>
+      <div contenteditable="true" id="notesArea" class="flex-1 bg-white dark:bg-gray-700 rounded p-4 border dark:border-gray-600 min-h-[300px] focus:outline-none"></div>
     </section>
+
   </main>
+</div>
 
-  <script>
-    let tasks = JSON.parse(localStorage.getItem('tasks')) || [];
-    const taskList = document.getElementById('taskList');
-    const taskInput = document.getElementById('taskTitle');
+<script>
+  const tasks = JSON.parse(localStorage.getItem("kelnest_tasks") || "[]");
 
-    function renderTasks() {
-      taskList.innerHTML = '';
-      tasks.forEach((task, index) => {
-        const li = document.createElement('li');
-        li.className = 'bg-white dark:bg-gray-700 p-3 rounded shadow flex justify-between items-center';
-        li.innerHTML = `
-          <span>${task}</span>
-          <button onclick="deleteTask(${index})" class="text-red-500 hover:text-red-700">🗑️</button>
-        `;
-        taskList.appendChild(li);
-      });
-    }
-
-    function addTask() {
-      const title = taskInput.value.trim();
-      if (!title) return;
-      tasks.push(title);
-      taskInput.value = '';
-      localStorage.setItem('tasks', JSON.stringify(tasks));
-      renderTasks();
-    }
-
-    function deleteTask(index) {
-      tasks.splice(index, 1);
-      localStorage.setItem('tasks', JSON.stringify(tasks));
-      renderTasks();
-    }
-
-    document.getElementById('addTaskBtn').addEventListener('click', addTask);
-    document.getElementById('taskTitle').addEventListener('keypress', (e) => {
-      if (e.key === 'Enter') addTask();
+  function renderTasks() {
+    const list = document.getElementById("taskList");
+    list.innerHTML = "";
+    tasks.forEach((task, i) => {
+      const div = document.createElement("div");
+      div.className = "task-block p-4 bg-white dark:bg-gray-800 rounded-xl border dark:border-gray-600 flex justify-between items-center";
+      div.innerHTML = `<input value="${task}" oninput="tasks[${i}]=this.value;saveTasks()" class="bg-transparent flex-1 outline-none text-lg" />
+        <button onclick="deleteTask(${i})" class="ml-4 text-red-500">🗑️</button>`;
+      list.appendChild(div);
     });
+  }
 
-    document.getElementById('tasksBtn').onclick = () => {
-      document.getElementById('tasksSection').classList.remove('hidden');
-      document.getElementById('notesSection').classList.add('hidden');
-    }
-
-    document.getElementById('notesBtn').onclick = () => {
-      document.getElementById('notesSection').classList.remove('hidden');
-      document.getElementById('tasksSection').classList.add('hidden');
-    }
-
-    const darkModeBtn = document.getElementById('darkModeBtn');
-    function toggleDarkMode() {
-      document.documentElement.classList.toggle('dark');
-      darkModeBtn.textContent = document.documentElement.classList.contains('dark') ? '☀️' : '🌙';
-    }
-
-    const notesContainer = document.getElementById('notesContainer');
-    notesContainer.innerHTML = localStorage.getItem('notes') || '';
-    notesContainer.addEventListener('input', () => {
-      localStorage.setItem('notes', notesContainer.innerHTML);
-    });
-
+  function addTask() {
+    tasks.push("New Task");
+    saveTasks();
     renderTasks();
-  </script>
+  }
+
+  function deleteTask(index) {
+    tasks.splice(index, 1);
+    saveTasks();
+    renderTasks();
+  }
+
+  function saveTasks() {
+    localStorage.setItem("kelnest_tasks", JSON.stringify(tasks));
+  }
+
+  function formatText(command) {
+    document.execCommand(command, false, null);
+  }
+
+  function insertHeading(level) {
+    document.execCommand("formatBlock", false, `h${level}`);
+  }
+
+  function insertQuote() {
+    document.execCommand("formatBlock", false, "blockquote");
+  }
+
+  document.getElementById("darkModeToggle").onclick = () => {
+    document.documentElement.classList.toggle("dark");
+  };
+
+  document.getElementById("showTasks").onclick = () => {
+    document.getElementById("tasksSection").classList.remove("hidden");
+    document.getElementById("notesSection").classList.add("hidden");
+    document.getElementById("notesToolbar").classList.add("hidden");
+  };
+
+  document.getElementById("showNotes").onclick = () => {
+    document.getElementById("notesSection").classList.remove("hidden");
+    document.getElementById("tasksSection").classList.add("hidden");
+    document.getElementById("notesToolbar").classList.remove("hidden");
+  };
+
+  renderTasks();
+</script>
 </body>
 </html>
